Added swagger ui